use fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -7,5 +7,5 @@
 }
 
 .App.page {
-  padding-top: 15%;
+  padding-top: 80px;
 }
